# asteroids

./: Cargo.toml  assets  asteriods.d.ts  asteriods.js  index.html  wasm-bindgen-run.sh
.cargo/: config.toml
docs/: asteriods.js  asteriods_bg.wasm.d.ts  hack_for_chrome.js  index.html
src/: asteriods.rs  main.rs
